# ignition2

./: .dev.vars.example  .env.local.example  .gitignore  ARCHITECTURE.md  AUDIT_INDEX.md  AUDIT_QUICK_REFERENCE.md  CHANGELOG.md  CODE_STYLE_GUIDE.md  COMPREHENSIVE_TASK_LIST.md  CONTINUATION_PLAN.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEPLOYMENT_BLOCKER.md  E2E_ACTION_PLAN_UNIMPLEMENTED.md  E2E_TESTING_SETUP.md  FEATURE_STATE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  MASTER_FEATURE_SPEC.md  NEO4J_COPILOT_INSTRUCTIONS.md  NEO4J_PROMPT_BUNDLE_README.md  ORGANIZATION_COMPLETE.md  PERF.md  PERFORMANCE_TUNING_GUIDE.md  PITFALL_FIXES_COMPLETE.md  QUICK_START.md  README.md  README_AUDIT_RESULTS.md  README_SESSION_2.md  RECOVERY_CODES_QUICK_REFERENCE.md  SESSION_2_MASTER_INDEX.md  SESSION_2_PREP_SUMMARY.md  SESSION_3_COMPLETION_REPORT.md  SESSION_SUMMARY_2026-01-16.md  SESSION_UPDATE_2026-01-16_Phase2.md  SYNC.md  TEST_FINAL_REPORT.md  TEST_STATUS_SUMMARY.md  TEST_VERIFICATION_REPORT.md  TIER_1_COMPLETION_REPORT.md  TIER_1_FINAL_STATUS.md  (+15 more)
app/backend/: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
app/backend/crates/api/: Cargo.toml
app/backend/crates/api/src/: config.rs  error.rs  main.rs  state.rs  (+2 more)
app/backend/migrations/: 0001_auth_substrate.sql  0001_schema.sql  0002_gamification_substrate.sql  0002_seeds.sql  0003_deprecate_age_verification.sql  0003_focus_substrate.down.sql  0004_habits_goals_substrate.sql  0006_planning_substrate.down.sql  0007_market_substrate.down.sql
app/backend/scripts/: deploy-fly.sh
(+907 files in other folders)
